Add template .qmd

--- a/000-Template/{{experiment_name}}.qmd
+++ b/000-Template/{{experiment_name}}.qmd
@@ -1,55 +1,72 @@
 ---
-title: "NA"
-sample: 25
-output:
-  flexdashboard::flex_dashboard:
-    source_code: embed
-    vertical_layout: fill
+title: "na"
+author: "name"
+logo: "https://as2.ftcdn.net/v2/jpg/02/33/12/47/1000_F_233124776_IL2jsHaRiYYgZK5X0rDAjKGz1XQmBleK.jpg"
+nav-buttons:
+- icon: github
+  href: https://github.com/mmccoy-01/bioluminescent_imaging_experimental_template
+- icon: linkedin
+  href: https://www.linkedin.com/in/themichaelmccoy
+format: 
+  dashboard:
     orientation: columns
-    theme: 
-      version: 4
-      bootswatch: cosmo
-runtime: shiny
+    theme:
+      light: cerulean
+      dark: darkly
+server: shiny
 ---
 
-```{r user_defined_parameters, message=FALSE}
+```{r Setup}
+#| context: setup
+
+pkg_list <- c(
+  "knitr", "tidyverse", "shiny", "magick", "rsvg", "DT",
+  "scales", "plotly", "survival", "survminer", "jmv"
+)
+
+# Function to install and load packages
+load_packages <- function(pkg_list) {
+  for (pkg in pkg_list) {
+    if (!require(pkg, character.only = TRUE)) {
+      install.packages(pkg, dependencies = TRUE)
+      library(pkg, character.only = TRUE)
+    }
+  }
+}
+
+load_packages(pkg_list)
+
+# library(knitr) # for kable table formatting
+# library(tidyverse) # tidyverse
+# library(shiny) # shiny app functionality
+# library(DT) # for rendering tables
+# library(scales) # scale functions for customizing visualizations
+# library(plotly) # interactive cursor friendly plots
+# library(survival) # for survival curves
+# library(survminer) # for survival curves
+# library(jmv) # performing statistical analyses
+
+#setwd(dirname(rstudioapi::getSourceEditorContext()$path))
+
 # The user defines different variables and parameters that will be specific to the study.
 
-#best_seed <-  "na"
-number_of_groups <- 5
+best_seed <-  "na"
+number_of_groups <- 4
 mice_per_group <- 5
-filtered_mice <- setdiff(1:30, c(5, 6, 14, 22, 24))
-#engraftment_imaging_date <- "na"
-labels <- c("0" = "NA", "1" = "NA", "2" = "NA", "3" = "NA", "4" = "NA", "5" = "NA")
-pal <- c("NA" = "#000000", "NA" = "#f8766d", "NA" = "#7cae00", "NA" = "#00bfc4", "NA" = "#C3B1E1", "NA" = "orange")
+filtered_mice <- setdiff(1:30, c(2, 7, 8, 14, 19)) # excluding 2, 7, 8, 14, 19
+
+labels <- c("0" = "Non-study", "1" = "Treatment A", "2" = "Treatment B", "3" = "Treatment C", "4" = "Treatment D")
+pal <- c("Non-study" = "#000000", "Treatment A" = "#f8766d", "Treatment B" = "#7cae00", "Treatment C" = "#00bfc4", "Treatment D" = "#C3B1E1")
 
 # Link to organization logo
-src <- "https://yt3.googleusercontent.com/ytc/APkrFKbprBkcDrFaaYruHcnwzSgxUJV2N0799D788ar6dQ=s900-c-k-c0x00ffffff-no-rj"
+src <- "https://as2.ftcdn.net/v2/jpg/02/33/12/47/1000_F_233124776_IL2jsHaRiYYgZK5X0rDAjKGz1XQmBleK.jpg"
 
 # Save descriptives and anova stat outputs as a .txt file? y or n
 # Default is n to stop the .txt from constantly being overwritten when the .Rmd file is ran
 save_output <- "n"
 ```
 
-```{r Load Libraries, message=FALSE}
-# Set root.dir to the current file's directory
-knitr::opts_knit$set(root.dir = dirname(rstudioapi::getSourceEditorContext()$path))
-#setwd(dirname(rstudioapi::getSourceEditorContext()$path))
-
-# Load packages
-library(flexdashboard) # dashboard view for multiple panes
-library(knitr) # for kable table formatting
-library(tidyverse) # tidyverse
-library(shiny) # shiny app functionality
-library(DT) # for rendering tables
-library(scales) # scale functions for customizing visualizations
-library(plotly) # interactive cursor friendly plots
-library(survival) # for survival curves
-library(survminer) # for survival curves
-library(jmv) # performing statistical analyses
-```
-
-```{r Data Pre-Processing, message=FALSE, warning=FALSE}
+```{r Data Pre-Processing}
 # Create 'processed_data' which will be one data frame that contains:
 # 1. all of the imaging data across weeks by funneling all of the weeks' imaging data into one data frame.
 # 2. all of the mass data across weeks.
@@ -104,38 +121,132 @@ processed_data <- left_join(raw_data, imaging_data, by = "id")
 write_csv(processed_data, file = "data/processed/processed_data.csv")
 ```
 
-```{r Treatment Assignment, message=FALSE, warning=FALSE}
-
-## FIX THIS
-
-
+```{r Treatment Assignment}
+#| output: FALSE
 
 # Using the already user-defined filtered_mice, randomly assign mice to treatment conditions so that each treatment condition has equivalent total_flux between treatments. All of the filtered/unassigned remaining mice are assigned to na which gets updated to trt_factor = 0 aka the non-study/expansion group.
 
 # Load data
 processed_data <- read.csv("data/processed/processed_data.csv")
 
-processed_data <- processed_data %>%
-  mutate(trt_factor = factor(case_when(
-    id %in% c(8, 27) ~ 0,
-    id %in% c(4, 18, 19, 23, 25) ~ 1,
-    id %in% c(6, 7, 13, 17, 20) ~ 2,
-    id %in% c(1, 3, 14, 21, 24) ~ 3,
-    id %in% c(5, 9, 11, 16, 26) ~ 4,
-    id %in% c(2, 10, 12, 15, 22) ~ 5
-  ))) %>%
-  mutate(trt = factor(case_when(
-    id %in% c(8, 27) ~ "Non-study",
-    id %in% c(4, 18, 19, 23, 25) ~ "CART38 + Dasatinib",
-    id %in% c(6, 7, 13, 17, 20) ~ "CART38 alone",
-    id %in% c(1, 3, 14, 21, 24) ~ "Dasatinib alone",
-    id %in% c(5, 9, 11, 16, 26) ~ "Untransduced T-cells",
-    id %in% c(2, 10, 12, 15, 22) ~ "Untreated"
-  )))
+filtered_data <- processed_data %>%
+  filter(imaging_date == engraftment_imaging_date, id %in% filtered_mice) %>%
+  distinct(id, .keep_all = TRUE) %>%
+  arrange(total_flux)
 
+# Define the assign_groups function
+assign_groups <- function(data, num_groups, num_per_group) {
+  # Create an empty vector to store group assignments
+  trt <- integer(nrow(data))
+  
+  # Create a data frame to store mean total_flux for each group
+  mean_total_flux <- data.frame(Group = 1:num_groups, Mean_Total_Flux = numeric(num_groups))
+  
+  # Shuffle the data to randomize assignments
+  data <- data[sample(nrow(data)), ]
+  for (i in 1:num_groups) {
+    # Select a subset of data for each group
+    group_data <- data[((i - 1) * num_per_group + 1):(i * num_per_group), ]
+    
+    # Calculate mean total_flux for the group
+    mean_flux <- mean(group_data$total_flux)
+    
+    # Assign the group number to the trt column
+    trt[((i - 1) * num_per_group + 1):(i * num_per_group)] <- i
+    
+    # Store the mean total_flux in the mean_total_flux data frame
+    mean_total_flux[i, 2] <- mean_flux
+  }
+  
+  # Add the trt column to the data frame
+  data$trt <- trt
+  
+  # Return the data frame with group assignments
+  return(list(Data = data, Mean_Total_Flux = mean_total_flux))
+}
+
+# Initialize variables to store the best seed and its corresponding variability
+best_seed <- NULL
+best_variability <- Inf
+
+# Loop through the first 5000 seeds
+# For the first run, you can cycle through 100,000 seeds instead, but it will take some time. The greater the loop number, the closer to the best randomization. After finding the best_seed, delete from here to here and manually input the best_seed in the 'user_defined_parameters' chunk
+
+
+
+# here
+for (seed in 1:5000) {
+  set.seed(seed)
+  
+  # Call the function to assign groups using filtered_data
+  result <- assign_groups(filtered_data, number_of_groups, mice_per_group)
+  
+  # Calculate the standard deviation of mean total_flux across groups
+  variability <- sd(result$Mean_Total_Flux$Mean_Total_Flux)
+  
+  # Check if this seed has lower variability than the current best
+  if (variability < best_variability) {
+    best_variability <- variability
+    best_seed <- seed
+  }
+}
+
+# Print the seed with the least variability
+cat("Seed with the least variability:", best_seed, "\n")
+
+# here
+
+
+
+set.seed(best_seed)
+
+# Function to assign mice to groups
+assign_groups <- function(data, num_groups, num_per_group) {
+  # Create an empty vector to store group assignments
+  trt_factor <- integer(nrow(data))
+  
+  # Create a data frame to store mean total_flux for each group
+  mean_total_flux <- data.frame(Group = 1:num_groups, Mean_Total_Flux = numeric(num_groups))
+  
+  # Shuffle the data to randomize assignments
+  data <- data[sample(nrow(data)), ]
+  for (i in 1:num_groups) {
+    # Select a subset of data for each group
+    group_data <- data[((i - 1) * num_per_group + 1):(i * num_per_group), ]
+    
+    # Calculate mean total_flux for the group
+    mean_flux <- mean(group_data$total_flux)
+    
+    # Assign the group number to the trt_factor column
+    trt_factor[((i - 1) * num_per_group + 1):(i * num_per_group)] <- i
+    
+    # Store the mean total_flux in the mean_total_flux data frame
+    mean_total_flux[i, 2] <- mean_flux
+  }
+  
+  # Add the trt_factor column to the data frame
+  data$trt_factor <- trt_factor
+  
+  # Return the data frame with group assignments
+  return(list(Data = data, Mean_Total_Flux = mean_total_flux))
+}
+
+# Call the function to assign groups using filtered_data
+result <- assign_groups(filtered_data, number_of_groups, mice_per_group)
+
+# Add trt_factor and trt to processed_data data frame.
+# NA trt_factor values become 0 and trt becomes Non-study
+# Add trt_factor and trt to processed_data data frame
+processed_data <- processed_data %>%
+  left_join(result$Data %>% select(id, trt_factor), by = "id") %>%
+  mutate(trt_factor = as.factor(ifelse(is.na(trt_factor), "0", trt_factor))) %>%
+  select(id, trt_factor, everything()) %>%
+  mutate(trt = factor(trt_factor, levels = names(labels), labels = labels)) %>%
+  relocate(trt_factor, .before = trt_injection_vial) %>% 
+  relocate(trt, .before = trt_injection_vial)
   
 # EXAMPLE CODE FOR REPLACING id = 6 WITH ID = 23
-# For cases where a mouse that has been imaged and assigned to a treatment and needs to be replaced
+# For cases where a mouse that has been imaged and assigned to a treatment and needs to be replaced 
 #processed_data <- processed_data %>%
   #mutate(imaging_date = as.Date(imaging_date, format = "%Y/%m/%d")) %>%
   #mutate(
@@ -149,66 +260,43 @@ write_csv(processed_data, file = "data/processed/processed_data.csv")
 
 # Data
 
-Column {.tabset data-width=600}
------------------------------------------------------------------------
+## Column
 
-### Treatment Plot
+### {.toolbar}
 
-```{r Treatment Plot, message=FALSE, warning=FALSE, fig.height=40, fig.width=11}
+```{r Treatment Plot Sidebar}
+selectInput("pdx", "PDX:",
+            choices = unique(processed_data$tumor_injection),
+            selected = unique(processed_data$tumor_injection)[1])
+selectInput("y_axis", "Y-axis:",
+            choices = c("Flux" = "total_flux", "Radiance" = "avg_radiance"),
+            selected = "total_flux")
+checkboxInput("include_non_study", "Include non-study mice", value = FALSE)
+selectInput("calculation_type", "Calculation Type:",
+            choices = c("Mean", "Median", "Individual"),
+            selected = "Mean")
+```
+
+### Row {.tabset}
+
+```{r Treatment Plot Shiny App Server}
+#| context: server
+
 # Load data
 processed_data <- read.csv("data/processed/processed_data.csv") %>%
-  mutate(days_from_trt = floor(as.numeric(difftime(imaging_date, as.Date(processed_data$trt_injection_date[1], format = "%Y-%m-%d"), units = "days")))) %>% 
+  mutate(days_from_trt = floor(as.numeric(difftime(imaging_date, as.Date(trt_injection_date[1], format = "%Y-%m-%d"), units = "days")))) %>% 
   relocate(days_from_trt, .before = imaging_date)
 
-# Define UI
-ui <- fluidPage(
-  
-  sidebarLayout(
-    sidebarPanel(
-      # Dropdown for PDX (tumor_injection) selection
-      selectInput("pdx", "PDX:",
-                  choices = unique(processed_data$tumor_injection),
-                  selected = unique(processed_data$tumor_injection)[1]),
-      
-      # Dropdown for Y-axis selection
-      selectInput("y_axis", "Y-axis:",
-                  choices = c("Flux" = "total_flux", "Radiance" = "avg_radiance"),
-                  selected = "total_flux"),
-      
-      # Checkbox for including non-study mice
-      checkboxInput("include_non_study", "Include non-study mice", value = FALSE),
-      
-      # Dropdown for Calculation Type
-      selectInput("calculation_type", "Calculation Type:",
-                  choices = c("Mean", "Median", "Individual"),
-                  selected = "Mean")
-    ),
-    
-    mainPanel(
-      # Plot output
-      plotlyOutput("scatter_plot")
-    )
-  )
-)
+# Create reactive dataset based on PDX and toggle selection
+selected_data <- reactive({
+  data <- processed_data[processed_data$tumor_injection == input$pdx, ]
+  if (!input$include_non_study) {
+    data <- data[data$trt != "Non-study", ]
+  }
+  data
+})
 
-# Define server logic
-server <- function(input, output) {
-  
-  # Load data
-  processed_data <- read.csv("data/processed/processed_data.csv") %>%
-  mutate(days_from_trt = floor(as.numeric(difftime(imaging_date, as.Date(processed_data$trt_injection_date[1], format = "%Y-%m-%d"), units = "days")))) %>% 
-  relocate(days_from_trt, .before = imaging_date)
-  
-  # Create reactive dataset based on PDX and toggle selection
-  selected_data <- reactive({
-    data <- processed_data[processed_data$tumor_injection == input$pdx, ]
-    if (!input$include_non_study) {
-      data <- data[data$trt != "Non-study", ]
-    }
-    data
-  })
-  
-  # Create scatter plot without facet wrap
+# Render Plotly scatter plot
 output$scatter_plot <- renderPlotly({
   y_axis_title <- if (input$y_axis == "total_flux") "Flux [p/s]" else "Radiance [p/s/cm^2/sr]"
   y_axis_label <- if (input$y_axis == "total_flux") "Flux" else "Radiance"
@@ -307,15 +395,23 @@ output$scatter_plot <- renderPlotly({
 
   p
 })
-}
 
-# Run the application
-shinyApp(ui, server)
+# Render data table
+output$data <- renderTable({
+  selected_data()
+})
 ```
 
-### Kaplan-Meier Curve
+```{r Treatment Plot Output}
+#| title: "Treatment Plot"
 
-```{r Kaplan-Meier Curve, message=FALSE, warning=FALSE, fig.height=10, fig.width=11}
+plotlyOutput("scatter_plot")
+```
+
+```{r Kaplan-Meier Curve}
+#| title: "Kaplan-Meier Curve"
+#| results: asis
+
 # Load data
 processed_data <- read.csv("data/processed/processed_data.csv") %>%
   distinct(id, trt, death_date, trt_injection_date) %>% 
@@ -342,51 +438,98 @@ ggsurvplot(kmcurve, data = processed_data, xlim = c(0, 60), break.x.by = 7, ylab
            surv.scale = "percent",
            fill = pal,
            title = "",
-           risk.table.height = .20)
+           risk.table.height = 0.4)
 
-# Create a new plot area for the summary
-# This prevents the survival curve plot from occluding the printed summary_table
-par(mar = c(0, 0, 0, 0))
-plot.new()
+# Survival by Mouse and by Treatment
+
+# Read data
+processed_data <- read.csv("data/processed/processed_data.csv")
+
+# Calculate survival in days
+processed_data$survival_days <- as.numeric(difftime(as.Date(processed_data$death_date), 
+                                                    as.Date(processed_data$trt_injection_date), 
+                                                    units = "days"))
+
+# Function to create survival table
+create_survival_table <- function(data, group_by_trt = FALSE) {
+  if (group_by_trt) {
+    table_data <- data %>%
+      group_by(trt) %>%
+      summarise(mean_survival_days = mean(survival_days, na.rm = TRUE),
+                median_survival_days = median(survival_days, na.rm = TRUE),
+                min_survival_days = min(survival_days, na.rm = TRUE),
+                max_survival_days = max(survival_days, na.rm = TRUE))
+  } else {
+    table_data <- data %>%
+      distinct(id, .keep_all = TRUE) %>%
+      select(id, trt, survival_days)  # Include trt column for survival by mouse
+  }
+  
+  return(table_data)
+}
+
+# Create survival table by group
+survival_by_group <- create_survival_table(processed_data, group_by_trt = TRUE)
+
+# Create survival table by ID
+survival_by_id <- create_survival_table(processed_data, group_by_trt = FALSE)
+
+# Print survival tables
+cat("Survival by Group:\n")
+kable(survival_by_group, format = "markdown")
+cat("\n\n")
+cat("Survival by ID:\n")
+kable(survival_by_id, format = "markdown")
 
 # Get the summary table
 summary_table <- summary(kmcurve, times = seq(0, 60, 7))
 
-# Print the formatted summary
-print(summary_table, digits = 3)
+# Convert summary table to a data.frame
+summary_df <- as.data.frame(summary_table$table)
+
+# Print the formatted summary table using kable
+kable(summary_df, digits = 3, caption = "Kaplan-Meier Survival Curve Summary")
 ```
 
-### Spleen and Marrow Counts 
+```{r Spleen and Marrow Counts}
+#| title: "Spleen and Marrow Counts"
 
-```{r Spleen and Marrow Counts, message=FALSE, warning=FALSE}
-plotly::renderPlotly({
-  
-  # Load the processed data
+# Load the processed data
 processed_data <- read.csv("data/processed/processed_data.csv") %>%
   distinct(id, trt, spleen_total_live_cell_count, number_of_spleen_cryovials, cryovial_spleen_cell_total, spleen_cell_viability, manner_of_death, death_date)
-  
+
+# Filter to keep only rows with non-zero spleen_total_live_cell_count
+filtered_data <- processed_data %>%
+  filter(spleen_total_live_cell_count > 0)
+
+# Create the Plotly plot
 plot <- plot_ly(
-  data = processed_data,
+  data = filtered_data,
   x = ~id,
   y = ~spleen_total_live_cell_count,
   type = "bar",
-  color = ~trt, colors = pal,
+  color = ~trt, 
+  colors = pal,
   marker = list(line = list(width = 2)),  # Adjust the width of the bars
   hoverinfo = "text",
-              text = ~paste(
-              "ID: ", id,
-              "<br>Total Live Spleen Count:", sprintf("%.2e", spleen_total_live_cell_count),
-              "<br>Viability:", spleen_cell_viability,
-              "<br>", number_of_spleen_cryovials, "cryovial(s) at", sprintf("%.2e", cryovial_spleen_cell_total), " cells each",
-              "<br>Death date:", death_date,
-              "<br>Manner of death:", manner_of_death
-                                                        )
-  ) %>%
+  text = ~paste(
+    "ID: ", id,
+    "<br>Total Live Spleen Count:", sprintf("%.2e", spleen_total_live_cell_count),
+    "<br>Viability:", spleen_cell_viability,
+    "<br>", number_of_spleen_cryovials, "cryovial(s) at", sprintf("%.2e", cryovial_spleen_cell_total), " cells each",
+    "<br>Death date:", death_date,
+    "<br>Manner of death:", manner_of_death
+  )
+) %>%
   layout(
-    xaxis = list(title = "Mouse ID"),
+    xaxis = list(
+      title = "Mouse ID",
+      tickvals = filtered_data$id,  # Show ticks only for IDs in filtered data
+      ticktext = filtered_data$id   # Show tick labels corresponding to the IDs
+    ),
     yaxis = list(title = "Spleen Total Live Cell Count"),
     images = list(
-      source = src,
+      source = src,  # Ensure 'src' is defined and points to a valid image
       xref = "paper",
       yref = "paper",
       x = 0,
@@ -399,92 +542,76 @@ plot <- plot_ly(
   config(scrollZoom = TRUE, modeBarButtonsToAdd = list('drawopenpath'))
 
 # Display the Plotly plot
-print(plot)
+plot
+```
+
+## Column
+
+### Row
+
+```{r IVIS Images Processing}
+# Define the base path to the processed images
+base_path <- "data/imaging/processed"
+
+# List all folders within the processed directory
+folders <- list.dirs(base_path, full.names = TRUE, recursive = FALSE)
+
+# Function to process PNG images in a folder and convert them to SVG
+process_folder <- function(folder) {
+  png_files <- list.files(folder, pattern = "\\.PNG$", full.names = TRUE)
+  
+  # Read all PNG images at once and convert them to SVG format
+  svg_images <- lapply(png_files, function(png_path) {
+    # Read and convert to SVG in one step
+    svg_image <- image_convert(image_read(png_path), format = "svg")
+    
+    # Get image dimensions
+    img_info <- image_info(svg_image)
+    
+    # Return a list with the SVG image and its dimensions
+    list(svg_image = svg_image, width = img_info$width, height = img_info$height)
+  })
+  
+  # Return named list of SVG images and their dimensions
+  setNames(svg_images, basename(png_files))
+}
+
+# Process all folders sequentially and store the results in the plots list
+plots <- setNames(lapply(folders, process_folder), basename(folders))
+
+# Define a function to plot the SVG images
+plot_svg_image <- function(svg_image, img_width, img_height) {
+  par(mar = c(0, 0, 0, 0), oma = c(0, 0, 0, 0), xaxs = "i", yaxs = "i", bg = "white")
+  plot(1, type = "n", xlim = c(1, img_width), ylim = c(1, img_height), xlab = "", ylab = "", axes = FALSE)
+  rasterImage(as.raster(svg_image), 1, 1, img_width, img_height)
+}
+```
+
+:::: {.column-screen}
+::: {.panel-tabset}
+```{r IVIS Images Loop}
+#| results: asis
+#| out-width: 100%
+#| fig-format: svg
+#| cache: FALSE
+
+# Ensure plots are correctly looped and output without titles
+# Cache processed images to avoid reprocessing
+iwalk(plots, ~ {
+  cat('## ', .y, '\n\n') # Create a tab for each folder
+  
+  iwalk(.x, ~ {
+    plot_svg_image(.x$svg_image, .x$width, .x$height)
+    cat('\n\n')
+  })
 })
 ```
+:::
+::::
 
-### Flow Cytometry
+### Row
 
-```{r Flow Cytometry, results='asis'}
-# Set root.dir to the current file's directory
-current_file_dir <- dirname(rstudioapi::getSourceEditorContext()$path)
-knitr::opts_knit$set(root.dir = current_file_dir)
-
-# Specify the relative directory containing PNG files
-png_directory <- "data/flow"
-
-# Get a list of .PNG files within the specified directory
-png_files <- list.files(file.path(current_file_dir, png_directory), pattern = "\\.PNG$", full.names = TRUE)
-
-# Create a container div for the images
-cat("<div style='text-align: center;'>")
-
-# Loop through the .PNG files and generate HTML content with centered labels above each image
-for (png_file in png_files) {
-  # Get the base name of the PNG file (without the path)
-  file_name <- basename(png_file)
-
-  # Add a label div above the image with increased font size
-  cat(sprintf("<div style='font-size: 18px;'>%s</div>\n", file_name))
-
-  # Create HTML content with an image tag
-  cat(sprintf("<img src='%s' width='700' />\n", png_file))
-}
-
-# Close the container div
-cat("</div>\n")
-```
-
-Column {.tabset data-width=400}
------------------------------------------------------------------------
-
-### IVIS Images
-
-```{r IVIS Images, results='asis'}
-# Set root.dir to the current file's directory
-current_file_dir <- dirname(rstudioapi::getSourceEditorContext()$path)
-knitr::opts_knit$set(root.dir = current_file_dir)
-
-# Specify the relative file path
-file_path <- "data/imaging/processed/"
-
-# Get a list of all subdirectories one level deep within the specified directory
-subdirectories <- list.dirs(file.path(current_file_dir, file_path), full.names = TRUE, recursive = FALSE)
-
-# Sort the subdirectories in descending order
-subdirectories <- sort(subdirectories, decreasing = TRUE)
-
-# Loop through each subdirectory and generate HTML content
-for (subdirectory in subdirectories) {
-  # Get the name of the current subdirectory
-  folder_name <- basename(subdirectory)
-  
-  # Get a list of .PNG files within the subdirectory
-  png_files <- list.files(subdirectory, pattern = "\\.PNG$", full.names = TRUE, recursive = FALSE)
-  
-  # Sort the PNG files in descending order
-  png_files <- sort(png_files, decreasing = TRUE)
-  
-  # Create a container div for each subdirectory
-  cat("<div style='text-align: center;'>")
-  
-  # Loop through the .PNG files and generate HTML content with centered labels above each image
-  for (png_file in png_files) {
-    # Add a label div above the image with increased font size
-    cat(sprintf("<div style='font-size: 18px;'>%s</div>\n", folder_name))
-    
-    # Create HTML content with an image tag
-    cat(sprintf("<img src='%s' width='700' />\n", png_file))
-  }
-  
-  # Close the container div
-  cat("</div>\n")
-}
-```
-
-### Data Table
-
-```{r Data Table, message=FALSE, warning=FALSE}
+```{r Study Mice Data}
 # Load data
 processed_data <- read.csv("data/processed/processed_data.csv")
 
@@ -510,12 +637,13 @@ datatable(most_recent_data,
 
 # Subjects
 
-Column {.tabset data-width=500}
------------------------------------------------------------------------
+## Column {.tabset}
 
-### Mass Over Time
+### Mass
 
-```{r Mass, message=FALSE, warning=FALSE}
+```{r Mass}
+#| title: "Mass Over Time"
+
 # Read the files into data frames
 raw_mass <- read.csv("data/raw/raw_mass.csv")
 processed_data <- read.csv("data/processed/processed_data.csv")
@@ -541,11 +669,12 @@ p <- ggplotly(p)
 p
 ```
 
-### Engraftment Status Report
+### Engraftment Status
 
-#### Engraftment Status
+```{r Engraftment Status}
+#| title: "Engraftment Status"
+#| results: asis
 
-```{r Engraftment Status, message=FALSE, warning=FALSE, , fig.height=6, fig.width=9.5}
 processed_data <- read.csv("data/processed/processed_data.csv")
 
 # Precompute the order of 'id' based on 'total_flux' for the engraftment_imaging_date
@@ -606,11 +735,12 @@ processed_data %>%
   }
 ```
 
-#### Treatment Assignment Plot From Engraftment Imaging Date
-
 Seed with the least variability: `r best_seed`
 
-```{r Treatment Assignment Plot From Engraftment Imaging Date, message=FALSE, warning=FALSE, fig.height=6, fig.width=9.5}
+```{r Treatment Assignment Plot From Engraftment Imaging Date}
+#| title: "Treatment Assignment"
+#| results: asis
+
 # Load data
 processed_data <- read.csv("data/processed/processed_data.csv")
 
@@ -630,28 +760,38 @@ plot <- ggplot(data = processed_data %>% filter(imaging_date == engraftment_imag
 print(plot)
 ```
 
-### Thawing Cells
+### Injections {.tabset}
 
 #### Tumor
 
-##### na
+- Test
 
-#### Treatment
+#### Treatment {.tabset}
 
-##### na
+##### Palbociclib + CART19
 
-##### na
+- Test
 
-##### na
+##### Palbociclib + Untransduced T-cells
 
-Column {.tabset data-width=500}
------------------------------------------------------------------------
+- Test
 
-### Subjects
+##### CART19
 
-#### Mouse Current Status Plot
+- Test
 
-```{r Current Status by Cage and Treatment, message=FALSE, warning=FALSE, fig.height=6, fig.width=10}
+##### Untransduced T-cells
+
+- Test
+
+## Column {.tabset}
+
+### Current Status 
+
+```{r Current Status by Cage and Treatment}
+#| title: "Current Status"
+#| results: asis
+
 # Load data
 processed_data <- read.csv("data/processed/processed_data.csv")
 
@@ -686,9 +826,11 @@ scatterplot <- processed_data %>%
 print(scatterplot)
 ```
 
-#### Euthanasia Criteria Check
+### Euthanasia Criteria
 
-```{r Euthanasia Criteria Check, message=FALSE, warning=FALSE}
+```{r Euthanasia Criteria Check}
+#| title: "Euthanasia Criteria Check"
+
 # Load data
 processed_data <- read.csv("data/processed/processed_data.csv")
 
@@ -770,97 +912,17 @@ if (any_alive) {
 }
 ```
 
-#### Comments
+### Comments
 
-### Survival
+- Test
 
-```{r Survival by Mouse and by Treatment, message=FALSE, warning=FALSE}
-# Read data
-processed_data <- read.csv("data/processed/processed_data.csv")
+# Statistical Analyses 
 
-# Calculate survival in days
-processed_data$survival_days <- as.numeric(difftime(as.Date(processed_data$death_date), 
-                                                    as.Date(processed_data$trt_injection_date), 
-                                                    units = "days"))
+## Row {.tabset}
 
-# Function to create survival table
-create_survival_table <- function(data, group_by_trt = FALSE) {
-  if (group_by_trt) {
-    table_data <- data %>%
-      group_by(trt) %>%
-      summarise(mean_survival_days = mean(survival_days, na.rm = TRUE),
-                median_survival_days = median(survival_days, na.rm = TRUE),
-                min_survival_days = min(survival_days, na.rm = TRUE),
-                max_survival_days = max(survival_days, na.rm = TRUE))
-  } else {
-    table_data <- data %>%
-      distinct(id, .keep_all = TRUE) %>%
-      select(id, trt, survival_days)  # Include trt column for survival by mouse
-  }
-  
-  return(table_data)
-}
+```{r Descriptives}
+#| title: "Descriptives"
 
-# Create survival table by group
-survival_by_group <- create_survival_table(processed_data, group_by_trt = TRUE)
-
-# Create survival table by ID
-survival_by_id <- create_survival_table(processed_data, group_by_trt = FALSE)
-
-# Print survival tables
-cat("Survival by Group:\n")
-kable(survival_by_group, format = "markdown")
-cat("\n\n")
-cat("Survival by ID:\n")
-kable(survival_by_id, format = "markdown")
-```
-
-### Cage Cards
-
-```{r Cage Cards, results='asis'}
-# Set root.dir to the current file's directory
-current_file_dir <- dirname(rstudioapi::getSourceEditorContext()$path)
-knitr::opts_knit$set(root.dir = current_file_dir)
-
-# Specify the relative directory containing PNG files
-png_directory <- "data/cage_cards"
-
-# Get a list of .PNG files within the specified directory
-png_files <- list.files(file.path(current_file_dir, png_directory), pattern = "\\.PNG$", full.names = TRUE)
-
-# Create a container div for the images
-cat("<div style='text-align: center;'>")
-
-# Loop through the .PNG files and generate HTML content with centered labels above each image
-for (png_file in png_files) {
-  # Get the base name of the PNG file (without the path)
-  file_name <- basename(png_file)
-
-  # Add a label div above the image with increased font size
-  cat(sprintf("<div style='font-size: 18px;'>%s</div>\n", file_name))
-
-  # Create HTML content with an image tag
-  cat(sprintf("<img src='%s' width='700' />\n", png_file))
-}
-
-# Close the container div
-cat("</div>\n")
-```
-
-# Statistical Analyses
-
-Column
------------------------------------------------------------------------
-
-</verbatim>
-</div>
-
-### Descriptives
-
-<div class="column-scrollable">
-<verbatim>
-
-```{r Descriptives, message=FALSE, warning=FALSE, comment=NA}
 processed_data <- read.csv("data/processed/processed_data.csv")
 
 descriptives <- jmv::descriptives(
@@ -879,9 +941,9 @@ if (save_output == "y") {
 }
 ```
 
-### ANOVA
+```{r ANOVA}
+#| title: "ANOVA"
 
-```{r ANOVA, message=FALSE, warning=FALSE, comment=NA}
 processed_data <- read.csv("data/processed/processed_data.csv")
 
 tryCatch(
