--- a/template/{{experiment_name}}.qmd
+++ b/template/{{experiment_name}}.qmd
@@ -53,7 +53,7 @@ load_packages(pkg_list)
 best_seed <-  "na"
 number_of_groups <- 4
 mice_per_group <- 5
-filtered_mice <- setdiff(1:30, c(2, 7, 8, 14, 19)) # excluding 2, 7, 8, 14, 19
+filtered_mice <- setdiff(1:30, c(na))
 
 labels <- c("0" = "Non-study", "1" = "Treatment A", "2" = "Treatment B", "3" = "Treatment C", "4" = "Treatment D")
 pal <- c("Non-study" = "#000000", "Treatment A" = "#f8766d", "Treatment B" = "#7cae00", "Treatment C" = "#00bfc4", "Treatment D" = "#C3B1E1")
